--- a/index.html
+++ b/index.html
@@ -17,7 +17,25 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-  <script defer src="bundle.js?01fa93f057ad1acf01c9"></script></head>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./public/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./public/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./public/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./public/site.webmanifest" />
+  <link rel="icon" href="favicon.ico?e6a3241b8789038e71ff"><script defer src="bundle.js?e6a3241b8789038e71ff"></script></head>
   <body>
     <div id="popups"></div>
     <main>
